2023.3.6
* Fixed roll rule checking for figures without rolls (error introduced in 2023.1.3)
* Added manual in German language
* Added option to remove optimal sequence area (e.g. for screenshots)
* Fixed IMAC form scaling issues (Issue #276)

2023.3.5
* Update NZAC rules and sequences for 2023/2024
* Fixed CIVA rules for two flicks on horizontal line in Unlimited Unknown
* Fixed saving of separate figures as svg (Issue #275)

2023.3.4
* Fixed issue causing difficulty to select inverse P loops with unlinked rolls in the bottom (e.g. 8.6.24.4)
* Fixed issue causing incorrect crosswind exit after autocorrect roll-in-top
* Fixed issue where form R&L layout would switch from CIVA to IAC after printing form A, B or C
* Updated IMAC rule checking

2023.3.3
* Added German translations in CIVA rule files and help documents
* Added IMAC rules for 2023
* Limited Sequence Info Notes field height to 8em (~4 lines)

2023.3.2
* Added IMAC sequences for 2023
* Fixed issue in rule checking algorithm for figures that can not have rolls

2023.3.1
* Fixed illegal flick roll options showing in figure editor (Issue #255)
* Cleaned up CIVA rules
* Changed update warning to not appear within 48 hours of update, to prevent nuisance warnings
* Added German language for interface (Issue #250)
* Made some changes to the manual to improve printing
* Corrected 2023 IAC Glider Primary Known presentation to 10K
* Fixed conv-qtrs in rules23.js to correctly match opposite-load flick rolls
* Updated code, including figuresXX.js, to allow for figure family translation
* Added IMAC forms
* Added 2023 AAC sequences and updated AAC Sportsman Free max K
* Fixed issue in rulesWorker.js that caused Group-combined to present incorrect Alerts
* Changed vkbeautify.js to vkbeautify.min.js

2023.2.1
* Updated JSZip to 3.10.1
* Updated NZAC rules for 2022

2023.1.3
* Added option to choose CIVA glider positioning K for judges only or electronic tracking