@@ -940,6 +940,7 @@
                             figure chooser
                         </li>
                         <li>Choose to display the blue handles when editing figures or not</li>
+                        <li>Choose to show the optimal sequence area or not</li>
                         <li>
                             Change the image format (png or svg) and the image size for
                             saving all figures as separate images in a ZIP file
