@@ -1198,6 +1198,7 @@ chapter 7 settings
 														von Sequenz-Code.</li>
                         <li>Wahl, ob die blau-transparenten Figuranfasser angezeigt
 														werden sollen, oder nicht, wenn eine Figur ausgewählt ist.</li>
+						<li>Wahl, ob die optimale Sequenz Größe angezeigt wird.</li>
                         <li>Ändern des Bildformats (PNG oder SVG) und der Bildgröße
 														zum Speichern aller Figuren als Einzelbilder in einer
 														ZIP-Datei.</li>
