@@ -487,9 +487,11 @@ const saveSettings = [
   'marginRight',
   'gridColumns',
   'queueColumns',
+  'saveFigsSeparateImageFormat',
   'saveFigsSeparateWidth',
   'saveFigsSeparateHeight',
   'zipImageFilenamePattern',
+  'saveFigsSeparateFigureNumbers',
   'numberInCircle',
   'positionClearAuto',
   'showHandles',
