@@ -3,6 +3,8 @@
 * Added manual in German language
 * Added option to remove optimal sequence area (e.g. for screenshots)
 * Fixed IMAC form scaling issues (Issue #276)
+* Fixed Harmony grade showing on CIVA form A
+* Improved "Save figures separately" settings layout and saving, added optional figure numbers (Issue #275)
 
 2023.3.5
 * Update NZAC rules and sequences for 2023/2024
